--- a/assets/html/index.jinja
+++ b/assets/html/index.jinja
@@ -2,14 +2,14 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HKOSCon Control Panel</title>
+    <link href="http://hkoscon.org/favicon.ico" rel="icon">
+    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="/assets/app.css" rel="stylesheet">
 </head>
 <body>
 <div id="react-root"></div>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.4.2/react.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.4.2/react-dom.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/react-router/4.0.0-0/react-router.min.js"></script>
 <script src="/assets/app.js"></script>
 </body>
 </html>
