--- a/assets/html/index.jinja
+++ b/assets/html/index.jinja
@@ -6,6 +6,7 @@
     <title>HKOSCon Control Panel</title>
     <link href="http://hkoscon.org/favicon.ico" rel="icon">
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,400i,500,700" rel="stylesheet">
     <link href="/assets/app.css" rel="stylesheet">
 </head>
 <body>
