--- a/assets/html/index.jinja
+++ b/assets/html/index.jinja
@@ -13,6 +13,7 @@
 <div id="react-root"></div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.3/toastr.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
 <script src="/assets/app.js"></script>
 </body>
 </html>
