Add ssl cert for development

--- a/assets/html/index.jinja
+++ b/assets/html/index.jinja
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HKOSCon Control Panel</title>
-    <link href="http://hkoscon.org/favicon.ico" rel="icon">
-    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://hkoscon.org/favicon.ico" rel="icon">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,400i,500,700" rel="stylesheet">
     <link href="/assets/app.css" rel="stylesheet">
 </head>
