--- a/assets/html/index.jinja
+++ b/assets/html/index.jinja
@@ -54,6 +54,7 @@
         </div>
     </div>
 </div>
+<script src="https://www.gstatic.com/firebasejs/3.6.9/firebase.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.3/toastr.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.js"></script>
