--- a/assets/html/index.jinja
+++ b/assets/html/index.jinja
@@ -66,6 +66,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/react-redux/5.0.2/react-redux.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.17.1/moment.min.js"></script>
 {% endif %}
-<script src="/assets/app.js"></script>
+<script src="/app.js"></script>
 </body>
 </html>
