--- a/assets/html/index.jinja
+++ b/assets/html/index.jinja
@@ -7,7 +7,7 @@
     <link href="/data/manifest.json" rel="manifest">
     <link href="https://hkoscon.org/favicon.ico" rel="icon">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,400i,500,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400" rel="stylesheet">
     <link href="/assets/app.css" rel="stylesheet">
 </head>
 <body>
